Fixed spacing for instructions page

--- a/display.css
+++ b/display.css
@@ -11,7 +11,7 @@ h1 {
   font-size: 100px;
   text-align: center;
   font-family: 'Monoton', cursive;
-  margin: 150px 0 0px 0;
+  margin: 30px 0 0 0;
 }
 
 .links {
@@ -50,6 +50,7 @@ a {
 h2 {
   font-size: 50px;
   text-align: center;
+  margin: 0;
 }
 
 h3 {
@@ -59,8 +60,10 @@ h3 {
 .objectInfo {
   display: flex;
   display: wrap;
-  width: 70%;
-  margin: auto;
+  align-items: center;
+  justify-content: center;
+  width: 80%;
+  margin: auto auto;
   line-height: 1.4;
   font-size: 20px;
 }
@@ -69,7 +72,7 @@ h3 {
   display: block;
   line-height: 1.4;
   font-size: 20px;
-  margin: 20px 100px;
+  margin: 20px 80px;
 }
 .gamePlayWrapper {
   margin: 0 50px;
